# grafanix

./: .gitignore  README.md  default.nix  nixpkgs.json  nixpkgs.nix  shell.nix  treefmt.toml
backend/: config.dhall  default.nix  grafanix.cabal  stack.yaml
backend/app/: Main.hs
backend/nix/: grafanix.nix
backend/src/: Config.hs  Main.hs  Nix.hs  Parser.hs  Types.hs
backend/test/: Spec.hs  edge.dot  node.dot  zlib-deps.dot
frontend/: bower.json  default.nix  elm-srcs.nix  elm.json
frontend/scripts/: build.sh  watch.sh
frontend/src/: Controls.purs  D3.js  D3.purs  JS.elm  Main.elm  Main.purs  SessionStorage.js  SessionStorage.purs  Types.purs
nix/: grafanix-backend.nix  grafanix-frontend.nix  grafanix-release.nix  grafanix.nix  hies.nix  sources.json
static/: d3.js  default.nix  drawGraph.js  index.html  main.css
