name:                grafanix-backend
version:             0.1.0.0
author:              Oleh Stolyar
maintainer:          stolyar.oleh@gmail.com
license:             MIT
copyright:           2018 Oleh Stolyar
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library grafanix-internal
  hs-source-dirs:       src
  exposed-modules:      Config
                      , Nix
                      , Parser
                      , Types

  build-depends:        base
                      , aeson
                      , attoparsec
                      , bytestring
                      , containers
                      , errors
                      , hashable
                      , lrucache
                      , optparse-applicative
                      , protolude
                      , text
                      , typed-process
                      , vector

  default-language:     Haskell2010
  default-extensions:   DuplicateRecordFields
                      , DeriveGeneric
                      , FlexibleContexts
                      , GeneralizedNewtypeDeriving
                      , NoImplicitPrelude
                      , MultiParamTypeClasses
                      , OverloadedStrings
                      , RecordWildCards
                      , ScopedTypeVariables
                      , StandaloneDeriving
                      , TupleSections
                      , TypeApplications

  ghc-options:          -Wall

executable grafanix
  hs-source-dirs:       app
  main-is:              Main.hs

  build-depends:        base
                      , filepath
                      , grafanix-internal
                      , errors
                      , protolude
                      , scotty
                      , wai-cors
                      , wai-middleware-static

  default-language:     Haskell2010
  default-extensions:   NoImplicitPrelude
                      , OverloadedStrings
  ghc-options:          -Wall -threaded -rtsopts -with-rtsopts=-N

test-suite test
  type:                 exitcode-stdio-1.0
  hs-source-dirs:       test
  main-is:              Spec.hs

  build-depends:        base
                      , grafanix-internal
                      , text
                      , hspec
                      , hspec-attoparsec

  default-language:     Haskell2010
  default-extensions:   OverloadedStrings